# robot_framework_example

./: .env.dist  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_PLAN_ROBOT.md  STACK_ROBOT.md  pyproject.toml  robot.toml
.claude/: settings.json
.github/workflows/: build.yml  tests.yml
data/ddt/: create_customer_negative.csv  create_customer_positive.csv  create_product_positive.csv
data/enums/: __init__.py  _compat.py  country.py  delivery_condition.py  manufacturers.py  order_status.py
data/generators/: generate_customer_data.py  generate_delivery_data.py  generate_order_data.py  generate_product_data.py
data/models/: customer.py  order.py  product.py
data/schemas/: core_schema.py
data/schemas/customers/: create_customer_schema.py  (+1 more)
exmple_js_project/: eslint.config.mts  package.json  tsconfig.json
exmple_js_project/.github/: copilot-instructions.md
libraries/api/: response.py
libraries/mock/: mock_library.py
libraries/utils/: data_generator_library.py  date_utils_library.py  validation_library.py
sales-portal-robot-tests/: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN_ROBOT.md  Makefile  README.md  STACK.md  STACK_ROBOT.md  pyproject.toml  robocop.toml  robot.toml
sales-portal-robot-tests/docs/: IMPLEMENTATION_PLAN_ROBOT.md  improvements.md
sales-portal-robot-tests/exmple_js_project/: .gitignore  README.md  lint-staged.config.js  package-lock.json  playwright.config.ts
sales-portal-robot-tests/scripts/: notify_telegram.py
sales-portal-robot-tests/variables/: constants.py  env.py
variables/: api_config.py  constants.py
(+292 files in other folders)
